@@ -1,3 +1,8 @@
+2002-12-06    <crunchy@tzi.de>
+
+	* kernel/mpio.c: 2.4.20 does not contain the typedef purb_t
+	anymore. Replaced it with 'struct urb *'
+
 2002-11-18  Andreas Buesching  <crunchy@tzi.de>
 
 	* configure.in: add a check for readline header files
